create secions vendor and clients

--- a/index.html
+++ b/index.html
@@ -71,6 +71,144 @@
 
     </section>
 
+    <!-- vendor section starts -->
+    <section class="vendor" id="vendor">
+        <div class="heading">
+            <h1>top wedding vendors</h1>
+            <img src="images/header-img.png" alt="">
+        </div>
+
+        <div class="box-container">
+            <div class="box">
+                <img src="images/img1.jpg" alt="">
+                <div class="info">
+                    <h3>Dressing</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, quod!</p>
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="images/img2.jpg" alt="">
+                <div class="info">
+                    <h3>Florist</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, quod!</p>
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="images/img3.jpg" alt="">
+                <div class="info">
+                    <h3>Wedding Cake</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, quod!</p>
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="images/img4.jpg" alt="">
+                <div class="info">
+                    <h3>Venue and Hall</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, quod!</p>
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="images/img5.jpg" alt="">
+                <div class="info">
+                    <h3>Music and Party</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, quod!</p>
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="images/img6.jpg" alt="">
+                <div class="info">
+                    <h3>Photographer</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, quod!</p>
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- vendor section ends -->
+
+    <!-- client section starts -->
+    <section class="clients" id="clients">
+        <div class="heading">
+            <h1>our previous clients</h1>
+            <img src="images/header-img.png" alt="">
+        </div>
+
+        <div class="row">
+            <div class="box-container">
+                <div class="box">
+                    <img src="images/client-1.jpg" alt="">
+                    <div class="info">
+                        <h3>01. mark & alice</h3>
+                        <p> 
+                            <i class="fas fa-quote-left"></i> 
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi, porro sint rem omnis 
+                            doloremque nostrum dolores, placeat voluptatum optio nesciunt iusto exercitationem, 
+                            facilis doloribus eveniet nulla esse impedit tempore perspiciatis. 
+                            <i class="fas fa-quote-right"></i>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="images/client-2.jpg" alt="">
+                    <div class="info">
+                        <h3>01. mark & alice</h3>
+                        <p> 
+                            <i class="fas fa-quote-left"></i> 
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi, porro sint rem omnis 
+                            doloremque nostrum dolores, placeat voluptatum optio nesciunt iusto exercitationem, 
+                            facilis doloribus eveniet nulla esse impedit tempore perspiciatis. 
+                            <i class="fas fa-quote-right"></i>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <img src="images/divider.png" class="divider" alt="">
+
+            <div class="box-container">
+                <div class="box">
+                    <div class="info">
+                        <h3>01. mark & alice</h3>
+                        <p> 
+                            <i class="fas fa-quote-left"></i> 
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi, porro sint rem omnis 
+                            doloremque nostrum dolores, placeat voluptatum optio nesciunt iusto exercitationem, 
+                            facilis doloribus eveniet nulla esse impedit tempore perspiciatis. 
+                            <i class="fas fa-quote-right"></i>
+                        </p>
+                    </div>
+                    <img src="images/client-3.jpg" alt="">
+                </div>
+
+                <div class="box">
+                    <div class="info">
+                        <h3>01. mark & alice</h3>
+                        <p> 
+                            <i class="fas fa-quote-left"></i> 
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi, porro sint rem omnis 
+                            doloremque nostrum dolores, placeat voluptatum optio nesciunt iusto exercitationem, 
+                            facilis doloribus eveniet nulla esse impedit tempore perspiciatis. 
+                            <i class="fas fa-quote-right"></i>
+                        </p>
+                    </div>
+                    <img src="images/client-4.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- client section ends -->
+
     <script>
         let menu = document.querySelector('#menu-bar');
         let navbar = document.querySelector('.navbar');
